tests/baselines/reference/taggedTemplateWithConstructableTag02.errors.txt
tests/cases/conformance/es6/templates/taggedTemplateWithConstructableTag02.ts(6,1): error TS2349: Cannot invoke an expression whose type lacks a call signature. Type 'I' has no compatible call signatures.


==== tests/cases/conformance/es6/templates/taggedTemplateWithConstructableTag02.ts (1 errors) ====
    interface I {
        new (...args: any[]): string;
        new (): number;
    }
    var tag: I;
    tag `Hello world!`;
    ~~~~~~~~~~~~~~~~~~
!!! error TS2349: Cannot invoke an expression whose type lacks a call signature. Type 'I' has no compatible call signatures.